--- a/build.gradle
+++ b/build.gradle
@@ -8,14 +8,14 @@ buildscript {
     }
 
     dependencies{
-
+        classpath 'com.android.tools.build:gradle:7.2.0'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.0"
 
     }
 }
 
 plugins {
-    id 'com.android.application' version '8.0.2' apply false
-    id 'com.android.library' version '8.0.2' apply false
+    id 'com.android.application' version '7.2.0' apply false
+    id 'com.android.library' version '7.2.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
 }
