--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-
     repositories {
         google()
         mavenCentral()
+        maven { url "https://jitpack.io" }
 
     }
 
     dependencies{
+        classpath 'com.google.gms:google-services:4.3.15'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
         classpath 'com.android.tools.build:gradle:7.4.2'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.0"
 
@@ -18,4 +20,6 @@ plugins {
     id 'com.android.application' version '7.2.0' apply false
     id 'com.android.library' version '7.2.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+    id("com.google.gms.google-services") version "4.3.15" apply false
+
 }
