--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,7 +110,8 @@ dependencies {
 
     // otpView
     implementation 'com.github.appsfeature:otp-view:1.0'
-
+    //imagePicker
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
 }
 
 
