--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,8 @@ dependencies {
     implementation("com.google.firebase:firebase-auth-ktx")
     implementation("com.google.firebase:firebase-firestore-ktx")
     implementation("com.google.firebase:firebase-storage-ktx")
+    implementation 'androidx.browser:browser:1.6.0'
+    implementation 'com.google.android.play:integrity:1.2.0'
 
     //animated button for login
     implementation group: 'com.apachat', name: 'loadingbutton-android', version: '1.0.11'
@@ -117,6 +119,8 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+
 
 }
 
